--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
                       <div class="portfolio-item padd-15">
                         <div class="portfolio-item-inner shadow-dark">
                           <div class="portfolio-img">
-                            <a href="https://inotebook-cloud.cyclic.app/login"><img src="images/projects/p8.PNG" style="height: 200px;" alt="image"></a>
+                            <a href="https://inotebook-cloud.cyclic.app/login"><img src="https://user-images.githubusercontent.com/78311368/210269886-de67b3a2-84db-4506-ac25-0383b916d237.PNG" style="height: 200px;" alt="image"></a>
                           </div>
                           <br>
                           <h1 style="color: white; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; text-decoration: underline;">iNotebook Cloud</h1>
